--- a/app/src/main/res/layout/pizza_cell.xml
+++ b/app/src/main/res/layout/pizza_cell.xml
@@ -23,13 +23,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:text="Preço: R$" />
 
         <TextView
             android:id="@+id/preco_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="10"
+            android:layout_weight="70"
             android:text="TextView" />
     </LinearLayout>
 
