--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="preto">#000000</color>
+    <color name="red">#BD0202</color>
+    <color name="yellow">#FFD600</color>
 </resources>
